--- a/css/_var.scss
+++ b/css/_var.scss
@@ -3,14 +3,14 @@ $transition005: all 0.05s ease-in-out;
 $transition05: all 0.5s ease-in-out;
 $transition1: all 1s ease-in-out;
 
-$n400: 'NeutralFace', sans-serif;
-$n700: 'NeutralFace-Bold', sans-serif;
 
-$f300: 'HelveticaNeueCyr-Light', sans-serif;
-$f400: 'HelveticaNeueCyr-Roman', sans-serif;
-$f700: 'HelveticaNeueCyr-Bold', sans-serif;
+$f400: 'regular', sans-serif;
+$f450: 'medium', sans-serif;
+$f700: 'demi', sans-serif;
+$f750: 'bold', sans-serif;
 
-$text-color: #292929;
+
+$text-color: #191F32;
 
 %flex{
     display: flex;
@@ -36,10 +36,6 @@ $text-color: #292929;
     position: absolute;
 }
 
-@mixin font_min(){
-    font-size: 18px;
-    line-height: 22px;
-}
 
 
 
