--- a/css/main.css
+++ b/css/main.css
@@ -25,11 +25,10 @@
 }
 .oh {
   overflow: hidden;
-  padding-right: 18px;
 }
 
-.oh {
-  overflow: hidden;
+body.oh {
+  padding-right: 17px;
 }
 
 .ac {
@@ -733,9 +732,12 @@ hr {
   bottom: 0;
   left: 0;
   background: rgba(25, 31, 50, 0.8);
-  transition: all 0.2s ease-in-out;
+  transition: all 1s ease-in-out;
   opacity: 0;
   visibility: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding-right: 17px;
 }
 .modal-bg.vis {
   opacity: 1;
@@ -746,10 +748,18 @@ hr {
   width: 640px;
   background: #fff url(../img/modal_bg.png) center top no-repeat;
   top: 50%;
-  left: 50%;
+  left: calc(50% - 17px);
   transform: translate(-50%, -50%);
   border-radius: 16px;
-  position: absolute;
+  position: fixed;
+  opacity: 0;
+  visibility: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.modal.vis {
+  opacity: 1;
+  visibility: visible;
 }
 .modal_btn {
   width: calc(50% - 8px);
