--- a/css/_query.scss
+++ b/css/_query.scss
@@ -1,4 +1,83 @@
-@media only screen and (min-width: 768px) {
-    
+@media only screen and (max-width: 1100px) {
+    .aside {
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        background: #fff;
+        border-radius: 0px;
+        padding: 16px;
+        height: 72px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 100;;
+    }
+    .logo {
+        display: block;
+        width: 102px;
+        height: 16px;
+        background: url(../img/logo_min.png) center center no-repeat;
+    }
+    .login, .app-group, hr{
+        display: none;
+    }
+    .main {
+        padding: 72px 0 0;
+    }
+    .btn_head{
+        display: flex;
+        height: 40px;
+        padding: 0 24px;
+        font-family: $f450;
+        font-size: 18px;
+        line-height: 22px;
+    }
+    .page{
+        border-radius: 16px 16px 0px 0px;
+    }
 }
-    
+@media only screen and (max-width: 768px) {
+    .container{
+        width: 100%;
+    }
+    .user{
+        padding: 32px 0 0;
+    }
+    .user__main{
+        padding: 0 28px;
+    }
+    .user__about, .user__action{
+        padding: 0 15px;
+    }
+    .user__nick {
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .page {
+        background: url(../img/page_bg_min.png) left top/100% no-repeat;
+    }
+    .user__ava {
+        min-width: 120px;
+    }
+    .user__follow-count {
+        font-size: 16px;
+        line-height: 20px;
+        margin-bottom: 2px;
+    }
+    .user__follow-label {
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .user__about{
+        font-size: 16px;
+        line-height: 22px;
+    }
+    .user__action {
+        gap: 8px;
+        margin: 24px 0 32px;
+    }
+    .btn{
+        height: 40px;
+    }
+}    
