--- a/css/main.css
+++ b/css/main.css
@@ -442,6 +442,7 @@ body {
   width: 240px;
   height: 48px;
   cursor: pointer;
+  transition: all 0.2s ease-in-out;
 }
 .app_play {
   background: url(../img/btn_app_white.png) center center no-repeat;
@@ -450,7 +451,6 @@ body {
 .app_app {
   background: url(../img/btn_pla_white.png) center center no-repeat;
 }
-
 .login {
   display: inline-flex;
   align-items: center;
@@ -764,6 +764,7 @@ hr {
 .modal_btn {
   width: calc(50% - 8px);
   height: 48px;
+  transition: all 0.2s ease-in-out;
 }
 .modal_btn-app {
   background: url(../img/btn_app.png) center center no-repeat;
@@ -804,4 +805,92 @@ hr {
   top: 24px;
   right: 24px;
   cursor: pointer;
+}
+
+.btn_head {
+  display: none;
+}
+
+@media only screen and (max-width: 1100px) {
+  .aside {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: #fff;
+    border-radius: 0px;
+    padding: 16px;
+    height: 72px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 100;
+  }
+  .logo {
+    display: block;
+    width: 102px;
+    height: 16px;
+    background: url(../img/logo_min.png) center center no-repeat;
+  }
+  .login, .app-group, hr {
+    display: none;
+  }
+  .main {
+    padding: 72px 0 0;
+  }
+  .btn_head {
+    display: flex;
+    height: 40px;
+    padding: 0 24px;
+    font-family: "medium", sans-serif;
+    font-size: 18px;
+    line-height: 22px;
+  }
+  .page {
+    border-radius: 16px 16px 0px 0px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .container {
+    width: 100%;
+  }
+  .user {
+    padding: 32px 0 0;
+  }
+  .user__main {
+    padding: 0 28px;
+  }
+  .user__about, .user__action {
+    padding: 0 15px;
+  }
+  .user__nick {
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .page {
+    background: url(../img/page_bg_min.png) left top/100% no-repeat;
+  }
+  .user__ava {
+    min-width: 120px;
+  }
+  .user__follow-count {
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 2px;
+  }
+  .user__follow-label {
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .user__about {
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .user__action {
+    gap: 8px;
+    margin: 24px 0 32px;
+  }
+  .btn {
+    height: 40px;
+  }
 }/*# sourceMappingURL=main.css.map */
