--- a/css/main.scss
+++ b/css/main.scss
@@ -429,6 +429,10 @@ hr{
 .btn_head{
     display: none;
 }
-
-
+.post__head{
+    display: none;
+}
+.post__more{
+    display: none;
+}
 @import '_query';
