--- a/css/main.css
+++ b/css/main.css
@@ -811,6 +811,14 @@ hr {
   display: none;
 }
 
+.post__head {
+  display: none;
+}
+
+.post__more {
+  display: none;
+}
+
 @media only screen and (max-width: 1100px) {
   .aside {
     position: fixed;
@@ -836,9 +844,9 @@ hr {
     display: none;
   }
   .main {
-    padding: 72px 0 0;
+    padding: 72px 0;
   }
-  .btn_head {
+  .btn.btn_head {
     display: flex;
     height: 40px;
     padding: 0 24px;
@@ -848,6 +856,110 @@ hr {
   }
   .page {
     border-radius: 16px 16px 0px 0px;
+  }
+  .post__head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 15px;
+    margin-bottom: 16px;
+  }
+  .post__head-title {
+    display: flex;
+    gap: 16px;
+  }
+  .post__head-ava {
+    width: 40px;
+    height: 40px;
+    border-radius: 12px;
+  }
+  .post__head-nick {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    line-height: 20px;
+    font-family: "demi", sans-serif;
+    margin-bottom: 4px;
+  }
+  .post__head-verified {
+    width: 16px;
+    height: 16px;
+    margin-left: 8px;
+  }
+  .post__head-date {
+    font-size: 12px;
+    line-height: 15px;
+    color: #939AAE;
+  }
+  .post__head-action {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .post__head-action svg {
+    width: 20px;
+    height: 4px;
+    fill: #939AAE;
+    transition: all 0.2s ease-in-out;
+  }
+  .post__head-action:hover svg {
+    fill: #7321E8;
+  }
+  .post__pic {
+    border-radius: 0;
+  }
+  .post__action {
+    margin: 26px 0 18px;
+    padding: 0 15px;
+  }
+  .post__text {
+    padding: 0 15px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    position: relative;
+  }
+  .post__text.full {
+    -webkit-line-clamp: none;
+  }
+  .post__all {
+    padding: 0 15px;
+    margin-bottom: 40px;
+  }
+  .post__more {
+    display: block;
+    position: absolute;
+    right: 15px;
+    bottom: 1px;
+    font-size: 16px;
+    line-height: 20px;
+    text-decoration-line: underline;
+    color: #939AAE;
+    font-family: "medium", sans-serif;
+    cursor: pointer;
+    padding-left: 15px;
+    background: #fff;
+    transition: all 0.2s ease-in-out;
+  }
+  .post__more::before {
+    display: block;
+    content: "";
+    width: 40px;
+    height: 20px;
+    left: -40px;
+    top: 0;
+    position: absolute; /* FF3.6-15 */ /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, rgba(30, 87, 153, 0) 0%, rgb(255, 255, 255) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#001e5799", endColorstr="#ffffff",GradientType=1 ); /* IE6-9 */
+  }
+  .post__more:hover {
+    text-decoration-line: none;
+    color: #191F32;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -892,5 +1004,10 @@ hr {
   }
   .btn {
     height: 40px;
+    padding: 0 18px;
+  }
+  .tab {
+    padding: 0 15px;
+    margin-bottom: 24px;
   }
 }/*# sourceMappingURL=main.css.map */
