--- a/css/main.css
+++ b/css/main.css
@@ -792,6 +792,9 @@ hr {
   margin: 0 auto;
   margin-bottom: 32px;
 }
+.modal__desc_min {
+  display: none;
+}
 .modal__action {
   display: flex;
   gap: 16px;
@@ -961,6 +964,9 @@ hr {
     text-decoration-line: none;
     color: #191F32;
   }
+  body.oh {
+    padding-right: 0;
+  }
 }
 @media only screen and (max-width: 768px) {
   .container {
@@ -1009,5 +1015,44 @@ hr {
   .tab {
     padding: 0 15px;
     margin-bottom: 24px;
+  }
+  .btn_center {
+    width: calc(100% - 30px);
+  }
+  .modal {
+    z-index: 1000;
+    left: 50%;
+    width: 340px;
+  }
+  .modal-bg.vis {
+    z-index: 1000;
+  }
+  .modal__body {
+    padding: 48px;
+  }
+  .modal__close {
+    top: 16px;
+    right: 16px;
+  }
+  .modal__logo {
+    background: url(../img/logo_min_modal.png) center center no-repeat;
+    width: 154px;
+    height: 24px;
+    margin: 0 auto 24px;
+  }
+  .modal__desc {
+    display: none;
+  }
+  .modal__desc_min {
+    display: block;
+    width: auto;
+    margin-bottom: 24px;
+  }
+  .modal__action {
+    flex-direction: column;
+    gap: 16px;
+  }
+  .modal_btn {
+    width: 100%;
   }
 }/*# sourceMappingURL=main.css.map */
