--- a/css/main.scss
+++ b/css/main.scss
@@ -409,7 +409,10 @@ hr{
         margin-bottom: 32px;
         text-align: center;
         margin: 0 auto;
-        margin-bottom: 32px;    
+        margin-bottom: 32px;  
+        &_min{
+            display: none;
+        }  
     }
     &__action {
         display: flex;
