--- a/css/_query.scss
+++ b/css/_query.scss
@@ -209,7 +209,7 @@
         z-index: 1000;
     }
     .modal__body {
-        padding: 48px;
+        padding: 50px;
     }
     .modal__close {
         top: 16px;
@@ -234,6 +234,6 @@
         gap: 16px;
     }
     .modal_btn {
-        width: 100%;
+        width: 240px;
     }
 }    
