--- a/css/main.css
+++ b/css/main.css
@@ -441,6 +441,7 @@ body {
 .app {
   width: 240px;
   height: 48px;
+  border-radius: 16px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
 }
@@ -451,6 +452,10 @@ body {
 .app_app {
   background: url(../img/btn_pla_white.png) center center no-repeat;
 }
+.app:hover {
+  box-shadow: 0px 3px 9px 0px rgb(255, 255, 255);
+}
+
 .login {
   display: inline-flex;
   align-items: center;
@@ -765,6 +770,10 @@ hr {
   width: calc(50% - 8px);
   height: 48px;
   transition: all 0.2s ease-in-out;
+  border-radius: 16px;
+}
+.modal_btn:hover {
+  box-shadow: 0px 3px 9px 0px #e2b6ff;
 }
 .modal_btn-app {
   background: url(../img/btn_app.png) center center no-repeat;
@@ -1028,7 +1037,7 @@ hr {
     z-index: 1000;
   }
   .modal__body {
-    padding: 48px;
+    padding: 50px;
   }
   .modal__close {
     top: 16px;
@@ -1053,6 +1062,6 @@ hr {
     gap: 16px;
   }
   .modal_btn {
-    width: 100%;
+    width: 240px;
   }
 }/*# sourceMappingURL=main.css.map */
