--- a/css/main.scss
+++ b/css/main.scss
@@ -59,6 +59,7 @@ body {
 .app {
     width: 240px;
     height: 48px;
+    border-radius: 16px;
     cursor: pointer;
     transition: $transition;
     &_play {
@@ -69,6 +70,7 @@ body {
         background: url(../img/btn_pla_white.png) center center no-repeat;
     }
     &:hover{
+        box-shadow: 0px 3px 9px 0px rgb(255, 255, 255);
     }
 }
 .login {
@@ -382,7 +384,9 @@ hr{
         width: calc(50% - 8px);
         height: 48px;
         transition: $transition;
+        border-radius: 16px;
         &:hover{
+            box-shadow: 0px 3px 9px 0px #e2b6ff;
         }
     }
     &_btn-app {
